refactor(JornadaService): correção no retorno do método adicionarRegistro com tratamento de exceções